--- a/api/src/main/resources/reports/isrMain.jrxml
+++ b/api/src/main/resources/reports/isrMain.jrxml
@@ -331,6 +331,14 @@
 			<property name="net.sf.jasperreports.json.field.expression" value="writtenModelOutOf"/>
 			<fieldDescription><![CDATA[writtenModelOutOf]]></fieldDescription>
 		</field>
+		<field name="writtenEstimatesScore" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="writtenEstimatesScore"/>
+			<fieldDescription><![CDATA[writtenEstimatesScore]]></fieldDescription>
+		</field>
+		<field name="writtenEstimatesOutOf" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="writtenEstimatesOutOf"/>
+			<fieldDescription><![CDATA[writtenEstimatesOutOf]]></fieldDescription>
+		</field>
 		<field name="writtenReasonedEstimatesScore" class="java.lang.String">
 			<property name="net.sf.jasperreports.json.field.expression" value="writtenReasonedEstimatesScore"/>
 			<fieldDescription><![CDATA[writtenReasonedEstimatesScore]]></fieldDescription>
@@ -1415,6 +1423,18 @@ Note that proficiency scores for the Grade 10 Literacy Assessment do not appear 
 							</subreportParameter>
 							<subreportParameter name="writtenPlanningOutOf">
 								<subreportParameterExpression><![CDATA[$F{writtenPlanningOutOf}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="writtenModelScore">
+								<subreportParameterExpression><![CDATA[$F{writtenModelScore}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="writtenModelOutOf">
+								<subreportParameterExpression><![CDATA[$F{writtenModelOutOf}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="writtenEstimatesScore">
+								<subreportParameterExpression><![CDATA[$F{writtenEstimatesScore}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="writtenEstimatesOutOf">
+								<subreportParameterExpression><![CDATA[$F{writtenEstimatesOutOf}]]></subreportParameterExpression>
 							</subreportParameter>
 							<subreportParameter name="totalMultiOverall">
 								<subreportParameterExpression><![CDATA[$F{totalMultiOverall}]]></subreportParameterExpression>
