--- a/api/src/main/resources/reports/ltf12summary.jrxml
+++ b/api/src/main/resources/reports/ltf12summary.jrxml
@@ -39,24 +39,24 @@
 			<rectangle>
 				<reportElement mode="Opaque" x="535" y="108" width="175" height="339" forecolor="#FFFFFF" backcolor="#E6E6E6" uuid="8b225861-f4d2-4739-b3da-09ef0c276d3c">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
-					<printWhenExpression><![CDATA[$P{score}.equals("4 - Approfondie")]]></printWhenExpression>
+					<printWhenExpression><![CDATA[$P{score}.equals("4 - Approfondie (Extending)")]]></printWhenExpression>
 				</reportElement>
 			</rectangle>
 			<rectangle>
 				<reportElement mode="Opaque" x="360" y="108" width="175" height="339" forecolor="#FFFFFF" backcolor="#E6E6E6" uuid="8b90587e-7fee-4b7f-99a8-8538b65a05c7">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
-					<printWhenExpression><![CDATA[$P{score}.equals("3 - Acquise")]]></printWhenExpression>
+					<printWhenExpression><![CDATA[$P{score}.equals("3 - Acquise (Proficient)")]]></printWhenExpression>
 				</reportElement>
 			</rectangle>
 			<rectangle>
 				<reportElement mode="Opaque" x="0" y="108" width="190" height="339" forecolor="#FFFFFF" backcolor="#E6E6E6" uuid="e34cd20d-59fd-4469-8aea-20727e814ecd">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
-					<printWhenExpression><![CDATA[$P{score}.equals("1 - Émergente")]]></printWhenExpression>
+					<printWhenExpression><![CDATA[$P{score}.equals("1 - Émergente (Emerging)")]]></printWhenExpression>
 				</reportElement>
 			</rectangle>
 			<rectangle>
 				<reportElement mode="Opaque" x="180" y="108" width="180" height="339" forecolor="#FFFFFF" backcolor="#E6E6E6" uuid="dfe961e3-e1af-4582-a5c1-027dbd0ac1c6">
-					<printWhenExpression><![CDATA[$P{score}.equals("2 - En voie d’acquisition")]]></printWhenExpression>
+					<printWhenExpression><![CDATA[$P{score}.equals("2 - En voie d’acquisition (Developing)")]]></printWhenExpression>
 				</reportElement>
 			</rectangle>
 			<break>
@@ -79,7 +79,7 @@
 This report describes your overall result on the Évaluation de littératie de la 12<sup>e</sup> année – Français langue seconde – immersion. Your result has been categorized into one of four proficiency levels: Émergente (Emerging), En voie d’acquisition (Developing), Acquise (Proficient) or Approfondie (Extending). Your proficiency level has been highlighted.]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="1" y="91" width="559" height="18" uuid="21b720bd-e3ea-47dc-89a6-f938b3c3da4f"/>
+				<reportElement x="1" y="91" width="709" height="18" uuid="21b720bd-e3ea-47dc-89a6-f938b3c3da4f"/>
 				<textElement markup="html">
 					<font fontName="BC Sans" size="9" isBold="true"/>
 				</textElement>
