--- a/api/src/main/resources/reports/nme10summary.jrxml
+++ b/api/src/main/resources/reports/nme10summary.jrxml
@@ -117,7 +117,7 @@ This report describes your overall result on the Grade 10 Numeracy Assessment. Y
 				<textElement markup="html">
 					<font fontName="BC Sans" size="9" isBold="false"/>
 				</textElement>
-				<text><![CDATA[Students demonstrate an <b>initial understanding</b> of the concepts and competencies relevant to the expected learning, specifically, they can:
+				<text><![CDATA[Students demonstrate an <b>initial understanding</b> of the concepts and competencies relevant to the expected learning. Specifically, they can:
 ]]></text>
 			</staticText>
 			<staticText>
@@ -140,7 +140,7 @@ This report describes your overall result on the Grade 10 Numeracy Assessment. Y
 				<textElement markup="html">
 					<font fontName="BC Sans" size="9" isBold="false"/>
 				</textElement>
-				<text><![CDATA[Students demonstrate a <b>partial understanding</b> of the concepts and competencies relevant to the expected learning, specifically, they can:]]></text>
+				<text><![CDATA[Students demonstrate a <b>partial understanding</b> of the concepts and competencies relevant to the expected learning. Specifically, they can:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="158" y="173" width="194" height="183" uuid="7161924f-db8a-448e-9ce6-3d4449b60588"/>
@@ -162,7 +162,7 @@ This report describes your overall result on the Grade 10 Numeracy Assessment. Y
 				<textElement markup="html">
 					<font fontName="BC Sans" size="9" isBold="false"/>
 				</textElement>
-				<text><![CDATA[Students demonstrate a <b>complete understanding</b> of the concepts and competencies relevant to the expected learning, specifically, they can:]]></text>
+				<text><![CDATA[Students demonstrate a <b>complete understanding</b> of the concepts and competencies relevant to the expected learning. Specifically, they can:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="330" y="173" width="194" height="183" uuid="7a6af51a-1f50-4564-a1e1-de2e909e21c6"/>
@@ -184,7 +184,7 @@ This report describes your overall result on the Grade 10 Numeracy Assessment. Y
 				<textElement markup="html">
 					<font fontName="BC Sans" size="9" isBold="false"/>
 				</textElement>
-				<text><![CDATA[Students demonstrate a <b>sophisticated understanding</b> of the concepts and competencies relevant to the expected learning, specifically, they can:]]></text>
+				<text><![CDATA[Students demonstrate a <b>sophisticated understanding</b> of the concepts and competencies relevant to the expected learning. Specifically, they can:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="503" y="173" width="194" height="183" uuid="b3e4e9de-eec5-4c8f-b385-056ff40f7263"/>
